--- a/yourSite/styles.css
+++ b/yourSite/styles.css
@@ -3,3 +3,23 @@ html, body {
     font-size: 15px;
     line-height: 1.5;
 }
+
+.hero {
+    background-image:
+    linear-gradient(to bottom, rgba(255,255,255,0.2), rgba(0,0,0,0.5)),
+    url('images/hero.jpg');
+    background-size: cover;
+    background-repeat: no-repeat; 
+    width: 100vw;
+    height: 100vh;
+}
+
+.hero-content {
+    margin-bottom: 5vh;
+    padding-left: 5vw; 
+    color: #ffffff;
+}
+.hero-button {
+    font-size: 20px; 
+    margin-top: 2.5vh; 
+}
