--- a/yourSite/styles.css
+++ b/yourSite/styles.css
@@ -23,3 +23,17 @@ html, body {
     font-size: 20px; 
     margin-top: 2.5vh; 
 }
+
+img.gallery {
+    width: 100%;
+    height: 80vh; 
+}
+.w3-tag {
+    height: 15px;
+    width: 15px;
+    padding: 0;
+    margin-top: 6px;
+}
+.w3-tag, .fa {
+    cursor: pointer;
+}
