--- a/yourSite/styles.css
+++ b/yourSite/styles.css
@@ -28,12 +28,25 @@ img.gallery {
     width: 100%;
     height: 80vh; 
 }
+
 .w3-tag {
     height: 15px;
     width: 15px;
     padding: 0;
     margin-top: 6px;
 }
+
 .w3-tag, .fa {
     cursor: pointer;
+}
+
+.btn-gallery img {
+    width: 100%;
+    height: 45vh;
+}
+
+.hidden {
+    overflow: hidden;
+    display: none;
+    visibility: hidden;
 }
