--- a/yourSite/styles.css
+++ b/yourSite/styles.css
@@ -4,6 +4,10 @@ html, body {
     line-height: 1.5;
 }
 
+.drop-down {
+    text-decoration: none; 
+}
+
 .hero {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.2), rgba(0,0,0,0.5)),
@@ -49,4 +53,12 @@ img.gallery {
     overflow: hidden;
     display: none;
     visibility: hidden;
+}
+
+.service {
+    padding-left: 5vw !important;
+    padding-right: 5vw !important;
+}
+.service-content {
+    padding-right: 15px !important;
 }
