--- a/yourSite/styles.css
+++ b/yourSite/styles.css
@@ -67,7 +67,7 @@ img.gallery {
     padding-right: 15px !important;
 }
 
-.w3-teal {
+.service-button {
     position:absolute;
     top:-28px;
     right:24px;
@@ -160,3 +160,12 @@ img.team-image {
     color: #ffffff !important;
     text-decoration: none;
 }
+
+.question {
+    font-size: 20px !important; 
+    cursor: pointer;
+}
+
+.answer{
+    display:none;
+  }
