--- a/yourSite/styles.css
+++ b/yourSite/styles.css
@@ -31,6 +31,11 @@ a.logo {
     margin-top: 2.5vh; 
 }
 
+.about {
+    padding-left: 5vw !important;
+    padding-right: 5vw !important; 
+}
+
 img.gallery {
     width: 100%;
     height: 80vh; 
@@ -169,3 +174,19 @@ img.team-image {
 .answer{
     display:none;
   }
+
+.contact {
+    padding-left: 5vw !important;
+    padding-right: 5vw !important; 
+}
+
+.contact-bar {
+    border-bottom: 6px solid #54bc44 !important;
+}
+
+.contact-text-teal {
+    color: #54bc44 !important;
+}
+.error {
+    color: red !important; 
+}
