--- a/yourSite/styles.css
+++ b/yourSite/styles.css
@@ -161,6 +161,11 @@ img.team-image {
     padding-right: 5vw !important;
 }
 
+.recap {
+    padding-left: 10vw !important;
+    padding-right: 10vw !important;
+}
+
 .ui-widget-content {
     border-right: #f1f1f1 !important;
     border-left: #f1f1f1 !important;
